--- a/client/components/tabs/tabs.wxss
+++ b/client/components/tabs/tabs.wxss
@@ -2,17 +2,20 @@
     width: 100%;
     /* border-bottom: 2rpx solid #ccc; */
     text-align: center;
-    height: 88rpx;
-    line-height: 88rpx;
+    height: 78rpx;
+    line-height: 78rpx;
     display: flex;
     flex-flow: row;
     justify-content: space-between;
+    font-size:38rpx;
+    font-family: 'wawa-gb';
 }
 .tab-item {
     width: 30%; 
     color:#434343;
 }
 .tab-item.active{
-    color:#2e9ffe;
-    border-bottom: 4rpx solid #2e9ffe;
+    color: #188758;
+    font-weight: bolder;
+    /* border-bottom: 4rpx solid #2e9ffe; */
 }
