--- a/client/components/tabs/tabs.wxss
+++ b/client/components/tabs/tabs.wxss
@@ -8,7 +8,7 @@
     flex-flow: row;
     justify-content: space-between;
     font-size:38rpx;
-    font-family: 'wawa-gb';
+    font-family: 'wawa';
 }
 .tab-item {
     width: 30%; 
