--- a/client/components/tabs/tabs.wxss
+++ b/client/components/tabs/tabs.wxss
@@ -9,6 +9,10 @@
     justify-content: space-between;
     font-size:38rpx;
     font-family: 'wawa';
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: white;
 }
 .tab-item {
     width: 30%; 
